--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %} {% block content %}
+<link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward"
+/>
 <div
     class="hero min-h-screen"
     style="
