--- a/templates/lessons.html
+++ b/templates/lessons.html
@@ -1,43 +1,165 @@
 {% extends "base.html" %} {% block content %}
-<div
-    class="w-250 items-center"
-    style="position: absolute; left: 50%; transform: translate(-50%, 0)"
->
-    <div class="card-body">
-        <h1 class="card-title text-2xl">Lessons</h1>
-        <ul class="list bg-base-100 rounded-box shadow-md">
-            {% for lesson in lessons %}
-            <li class="list-row">
-                <div class="text-4xl font-thin opacity-30 tabular-nums">
-                    {{ loop.index }}
-                </div>
-                <div class="list-col-grow">
-                    <h3 class="text-xl">{{ lesson.title }}</h3>
-                </div>
+<ul class="timeline timeline-vertical text-xl mt-5 mb-5">
+    {% set completed_lessons_list = user.completed_lessons.split(',') %}
+    <li>
+        <div class="timeline-start timeline-box text-xl bg-green-300">
+            Started Course
+        </div>
+        <div class="timeline-middle">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+                class="text-primary h-5 w-5"
+            >
+                <path
+                    fill-rule="evenodd"
+                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                    clip-rule="evenodd"
+                />
+            </svg>
+        </div>
+        <hr class="bg-primary" />
+    </li>
+
+    {% for lesson in lessons %} {% if loop.index is odd %}
+    <li name="right">
+        <hr
+            {%
+            if
+            loop.index|string
+            in
+            completed_lessons_list
+            %}
+            class="bg-primary"
+            {%
+            endif
+            %}
+        />
+        <div class="timeline-middle">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+                class="{% if loop.index|string in completed_lessons_list %} text-primary {% endif %} h-5 w-5"
+            >
+                <path
+                    fill-rule="evenodd"
+                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                    clip-rule="evenodd"
+                />
+            </svg>
+        </div>
+        <div
+            class="timeline-end timeline-box transition-transform duration-300 ease-in-out hover:scale-105 hover:shadow-lg {% if loop.index|string in completed_lessons_list %}bg-green-300{% endif %}"
+        >
+            <div class="text-xl font-thin tabular-nums inline">
+                <p class="text-2xl opacity-80">{{ loop.index }}</p>
                 <a
-                    class="btn btn-square btn-ghost"
+                    class="text-xl"
                     href="{{ url_for('chapter', chapter_id=lesson.id) }}"
+                    >{{ lesson.title }}{% if loop.index|string in
+                    completed_lessons_list %}
+                    <span class="checkmark">✓</span>
+                    {% endif %}</a
                 >
-                    <svg
-                        class="size-[1.2em]"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 24 24"
-                    >
-                        <g
-                            stroke-linejoin="round"
-                            stroke-linecap="round"
-                            stroke-width="2"
-                            fill="none"
-                            stroke="currentColor"
-                        >
-                            <path d="M6 3L20 12 6 21 6 3z"></path>
-                        </g>
-                    </svg>
-                </a>
-            </li>
-            <hr />
-            {% endfor %}
-        </ul>
-    </div>
-</div>
+            </div>
+            <div class="list-col-grow"></div>
+        </div>
+        <hr
+            {%
+            if
+            loop.index|string
+            in
+            completed_lessons_list
+            %}
+            class="bg-primary"
+            {%
+            endif
+            %}
+        />
+    </li>
+    {% else %}
+    <li
+        name="left"
+        class="{% if loop.index|string in completed_lessons_list %}bg-green-300{% endif %}"
+    >
+        <hr
+            {%
+            if
+            loop.index|string
+            in
+            completed_lessons_list
+            %}
+            class="bg-primary"
+            {%
+            endif
+            %}
+        />
+        <div
+            class="timeline-start timeline-box transition-transform duration-300 ease-in-out hover:scale-105 hover:shadow-lg {% if loop.index|string in completed_lessons_list %}bg-green-300{% endif %}"
+        >
+            <div class="text-xl font-thin tabular-nums inline">
+                <p class="text-2xl opacity-80">{{ loop.index }}</p>
+                <a
+                    class="text-xl"
+                    href="{{ url_for('chapter', chapter_id=lesson.id) }}"
+                    >{{ lesson.title }}{% if loop.index|string in
+                    completed_lessons_list %}
+                    <span class="checkmark">✓</span>
+                    {% endif %}</a
+                >
+            </div>
+            <div class="list-col-grow"></div>
+        </div>
+        <div class="timeline-middle">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+                class="{% if loop.index|string in completed_lessons_list %} text-primary {% endif %} h-5 w-5"
+            >
+                <path
+                    fill-rule="evenodd"
+                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                    clip-rule="evenodd"
+                />
+            </svg>
+        </div>
+        <hr
+            {%
+            if
+            loop.index|string
+            in
+            completed_lessons_list
+            %}
+            class="bg-primary"
+            {%
+            endif
+            %}
+        />
+    </li>
+    {% endif %} {% endfor %}
+    <li>
+        <hr />
+        <div class="timeline-middle">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+                class="h-5 w-5"
+            >
+                <path
+                    fill-rule="evenodd"
+                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                    clip-rule="evenodd"
+                />
+            </svg>
+        </div>
+        <div class="timeline-end timeline-box text-xl bg-yellow-300">
+            Course Completion!
+        </div>
+    </li>
+</ul>
+
 {% endblock %}
