--- a/templates/register.html
+++ b/templates/register.html
@@ -11,13 +11,16 @@
                 </svg>
                 <span>{{ message }}</span>
             </div>
-    
+
     {% endfor %}
 {% endif %}
 {% endwith %}
     <div class="min-h-screen w-full bg-black/50 backdrop-blur-sm">
         <div class="min-h-screen flex items-center justify-center">
-            <div class="card w-full max-w-md bg-white shadow-lg rounded-lg p-8">
+            <div class="card w-full max-w-md bg-white shadow-lg rounded-lg p-8 mt-8 pt-2 pb-2">
+                <div class="flex justify-center">
+                    <img class="size-20" src="/static/logo.png" alt="logo">
+                </div>
                     <!-- Heading -->
                     <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Create your account</h2>
                     <!-- Form -->
