--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
             rel="stylesheet"
             type="text/css"
         />
+        <script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="min-h-screen flex flex-col">
