--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -34,7 +34,7 @@ category,message in messages %}
 >
     <div>
         <h2 class="card-title text-2xl">Quiz: {{ quiz_id }}</h2>
-        <form action="{{ url_for('quiz', quiz_id=quiz_id) }}" method="post">
+        <form action="/quiz_ans/{{quiz_id}}" method="post">
             <div class="p-4">
                 <ul class="space-y-6">
                     {% for q in questions %}
