--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<script src="https://cdn.tailwindcss.com"></script>
 
 <div class="bg-[url(https://images.unsplash.com/photo-1457305237443-44c3d5a30b89?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);] bg-cover bg-center bg-fixed h-screen w-full">
 {% with messages = get_flashed_messages(with_categories=true) %}
